# Programming-realms

./: .gitignore
Basics/: ARecursion.cpp  BRecursion.cpp  BeRecursion.cpp  CRecursion.cpp  Cnt_inversion.cpp  Count_inversion.cpp  Euclid_Algorithm.cpp  NOSEQ.cpp  UpperLowerCase.cpp  ambigues853.cpp  basiccheck.cpp  codechef.cpp  default_codechef.cpp  hello.cpp  largest_array_word.cpp  long_arthimatic_array.cpp  max_array.cpp  pair.cpp  permutation.cpp  pointers.cpp  record_breaker.cpp  sieveofeartosthenes.cpp  spiral_array.cpp  stacksandheap.cpp  string.cpp  vectors.cpp
CPFamousQuestion/: )1bsf.cpp  259B(cf).cpp  597D(cf).cpp  ConnectedComponentandCycle.cpp  FrogProblem.cpp  LCA.cpp  ModularMultiInverse.cpp  coinChange.cpp  diameterOfTree.cpp  dijkstra.cpp  disjointSetUnion.cpp  edgeDeletion.cpp  floydWarshall.cpp  generateParenthesis.cpp  height&depthOfTree.cpp  knapsack.cpp  knapsack2.cpp  kruskal.cpp  longestCommonSubSeq.cpp  longestIncreasingSubSeq.cpp  multiSourceBSF.cpp  nextGreaterElements.cpp  primeSieve.cpp  rodCutting.cpp  shortestPathbfs.cpp  spojNakanj.cpp  subTree.cpp  subsetGenerate.cpp  subsetSum.cpp
Cppdev/: OOps.cpp  mock  mock.cpp  mock2.cpp
Cppdev/ReaderWriter/: CMakeLists.txt  main.cpp
File_Handling/: fileHandling.c  fileHandling_Adv.c
GDB learning/: hack1  hackbug1.c  test1.cpp  test2.c
JAVA/: Demo.java  oops.java
OOOPs/: Inheritance.cpp  OOOPs.md  OOOPsbasic.cpp  Polymorphism.cpp  classandobj.java
Sorting/: MergeSort.cpp  QuickSort.cpp  bubbleSort.cpp  countSort.cpp  dnfSort.cpp  hw012.cpp  waveSort.cpp
dataStructure/: BST.cpp  (+13 more)
(+160 files in other folders)
